[package]
name = "editor"
version = "0.1.0"
edition = "2021"
authors = ["nukkeldev"]

[dependencies]
analogue = { path = "../analogue" }
color-eyre = "0.6.3"
compact_str = "0.8.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
